tests/paczka1/small_fuzzy/97973473.err
Error in line 7: 5HXNv3zP S809 20,4
Error in line 1: CONUf2 A736 50,4
